Revision history for Perl extension PGXN::API

0.13.1

0.13.0  2011-04-30T20:40:21
      - The "name" and "user_name" fields are now full-text indexed in the
        "docs", "dists", and "extensions" indexes. This will allow a search
        such as `user:theory` to return results.

0.12.9  2011-04-30T20:01:29
      - Fixed a test failure in `t/indexer.t` on case-sensitive file systems.
      - Removed use of `env perl` in the `t/bin/testrscync` script. Just use
        `/usr/bin/perl -w` instead and let it be any Perl, not just 5.12.
        Should prevent failures on systems that don't allow arguments to `env`
        and where the system Perl is different than the installating Perl.
      - Added Data::Dump to list of requirements. Was inadvertently omitted.

0.12.8  2011-04-29T21:21:13
      - Some documentation tweaks.
      - First release to CPAN.

0.12.7  2011-04-28T22:28:31
      - Fixed a bug where an updated root `index.json` updated on the mirror
        was not likewise getting updated in the API root.
      - Moved the default `index.html` file so that it will be installed and
        findable when PGXN::API is installed from CPAN.
      - Added a link to the API docs to the default `index.html` file.
      - Renamed the `{char}` variable in the `userlist` URI template to
        `{letter}`, since it better describes the value (an ASCII letter a-z).
      - Search parameters must be submitted via a GET request.

0.12.6  2011-04-27T18:52:18
      - Eliminated "Use of uninitialized variable in soubroutine" warning when
        indexing extensions with no abstract.
      - Allow an optional trailing backslash on search URLs (since the
        template includes one).
      - Add new "special files" to detect: INSTALL, LICENSE, COPYING, and
        AUTHORS.
      - Changed search results content type from `text/json` to
        `application/json`.
      - Enabled JSONP for search requests.