@@ -45,7 +45,7 @@ my $build = $class->new(
         'namespace::autoclean'         => '0.11',
         'perl'                         => 5.012,
         'PGXN::API::Searcher'          => '0.9.0',
-        'Plack'                        => '0.9956',
+        'Plack'                        => '0.9977',
         'Plack::App::Directory'        => 0,
         'Plack::App::File'             => 0,
         'Plack::Middleware::JSONP'     => 0,
